Tue Apr 28 22:22:01 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-progsrv.cc: Fix comment typo.

Tue Apr 28 04:51:33 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_cursor.cc,backends/chert/chert_table.cc,
	  backends/glass/glass_cursor.cc,backends/glass/glass_table.cc:
	  Potentially increment the cursor version on cancel() or when the
	  database is reopened, and flag the current cursor version as used
	  when a cursor is rebuilt.  Fixes #675, reported by Germán M. Bravo.
	* tests/api_backend.cc: Add regression test cursorbug1 based on
	  reproducer supplied by Germán.

Thu Apr 23 05:25:48 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/exactphrasepostlist.cc: When matching an exact phrase, if a
	  term doesn't occur where we want, we can advance "term 0" using
	  skip_to() based on where the term does next occur rather than just
	  calling next() on it.

Thu Apr 23 05:03:28 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/nearpostlist.cc: Be lazier about opening PositionList
	  objects, as that causes a read of all the data for that
	  positionlist.

Thu Apr 23 04:11:30 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/nearpostlist.cc: Make code for scanning window for duplicate
	  positions a little clearer.

Wed Apr 22 13:52:55 GMT 2015  Olly Betts <olly@tartarus.org>

	* matcher/nearpostlist.cc: Fix "/*" within comment.

Wed Apr 22 12:53:37 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/nearpostlist.cc,matcher/nearpostlist.h: Reimplement OP_NEAR
	  check.  The new implementation consistently requires the terms to
	  occur at different positions, and fixes some false negatives.
	* tests/api_query.cc: Add regression tests as loosenear1.

Mon Apr 20 12:53:04 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/phrasepostlist.cc,matcher/phrasepostlist.h: Reimplement
	  OP_PHRASE check for loose phrases - the existing implementation was
	  buggy, giving both false positives and false negatives in rare